--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserslist": "^4.22.2",
     "eventsource-parser": "^0.0.5",
     "expiry-map": "^2.0.0",
+    "feather-icons": "^4.29.1",
     "github-markdown-css": "^5.1.0",
     "inter-ui": "^3.19.3",
     "lodash-es": "^4.17.21",
